# arc-eval-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: 0004-inline-vs-async-evaluation.md  0008-online-offline-evaluation.md  0011-pluggable-models.md  arc-evaluator.md  db-design.md  end-to-end-testing.md
migrations/: env.py
migrations/versions/: 0001_create_evaluations.py  0001_initial.py  0002_add_case_to_evaluations.py  0002_drop_task_type.py  0003_add_specs_rerun_of.py  0003_experiments.py  0004_create_spans.py  0004_experiment_prompt_template.py  0005_dataset_foundation.py  0006_dataset_reshape.py
src/arc_eval_service/: __init__.py  app.py  middleware.py
src/arc_eval_service/api/: __init__.py  dependencies.py  errors.py  experiment_schemas.py  main.py  middleware.py  read_schemas.py  routes.py  schemas.py
src/arc_eval_service/catalog/: __init__.py  loader.py
src/arc_eval_service/clients/: lab_inference_client.py
src/arc_eval_service/core/: __init__.py  config.py  deps.py  errors.py  logging.py
src/arc_eval_service/db/: __init__.py  base.py  engine.py  models.py  records.py
src/arc_eval_service/discovery/: __init__.py  router.py  schemas.py  service.py
src/arc_eval_service/domain/: __init__.py  errors.py  evaluation.py  experiment.py
src/arc_eval_service/evaluation/: __init__.py  contract.py  records.py  router.py  schemas.py  service.py
src/arc_eval_service/evaluators/: __init__.py  base.py  budget.py  cost.py  exact_match.py  heuristic.py  latency.py  regex.py  registry.py  token.py
src/arc_eval_service/ingest/: __init__.py  mapping.py  otlp.py  service.py  wire.py
src/arc_eval_service/ingestion/: __init__.py  router.py  schemas.py  service.py
src/arc_eval_service/judges/: __init__.py  base.py  registry.py
src/arc_eval_service/judging/: __init__.py  engine.py  model.py  ports.py  profiles.py  verdict.py
src/arc_eval_service/metrics/: __init__.py  base.py  registry.py  render.py
src/arc_eval_service/models/: __init__.py  anthropic.py  base.py  openai_compat.py  profiles.py
src/arc_eval_service/observability/: tracing.py
src/arc_eval_service/prompts/: __init__.py  loader.py  render.py  schema.py
src/arc_eval_service/schemas/: __init__.py  discovery.py  evaluation.py  models.py  trace.py
tests/: conftest.py
tests/contract/: test_evaluate_contract.py  test_lab_inference_contract.py
tests/e2e/: test_evaluate_workflow.py  test_evaluation_workflow.py  test_ingestion_workflow.py
tests/integration/: test_api.py  test_dataset_repositories.py  test_evaluate_reference.py  test_experiment_repositories.py  test_experiments_api.py  test_postgres_store.py  test_reads_api.py  test_repositories.py
tests/unit/: test_app.py  test_assembly.py  test_catalog.py  test_domain_errors.py  test_engine.py  test_evaluation_service.py  test_evaluators.py  test_experiment_service.py  test_ingest.py  test_interaction_resolver.py  test_judges.py  test_mapping.py  test_metrics.py  test_models.py  test_postgres_mapping.py  test_profiles.py  test_prompts.py  test_providers.py  test_repository_mappers.py  test_service.py  test_span_store.py  test_verdict.py
(+68 files in other folders)
