[project]
name = "arc-eval-service"
version = "0.1.0"
description = "Online and offline AI quality evaluation service for the ARC control plane."
readme = "README.md"
authors = [
    { name = "DimitarAtanassov", email = "dimitar789558@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_eval_service"]

# uv workspace compatible: this app can host sub-apps/packages and is also
# independently deployable on its own (see Dockerfile + Makefile).
[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.uv]
native-tls = true
default-groups = ["dev", "lint"]

# Resolve from public PyPI only; do not inherit any machine-global private index.
[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-env>=1.0.0",
    "anyio>=4.6.0",
    "httpx>=0.27.0",
    "testcontainers>=4.9.0",
    "psycopg[binary]>=3.2.0",
]

lint = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "pre-commit>=4.0.0",
]

test = [
    "coverage>=7.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.1",
    "pytest-httpserver>=1.1.3",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "pytest-env>=1.0.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
env = [
    "ARC_EVAL_LOG_LEVEL=WARNING",
]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: tests that exercise the API",
    "e2e: end-to-end evaluation workflow tests",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
mypy_path = ["src"]
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "respx.*", "opentelemetry.*"]
ignore_missing_imports = true

# Tests favour readability over ceremony: don't require return annotations on
# every test function (mirrors the ruff ANN ignore for tests).
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
indent-width = 4
target-version = "py313"
src = ["src", "tests"]
# Alembic-generated code follows its own conventions; lint our code only.
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "F","E","W","C90","I","N","UP","YTT","ANN","ASYNC",
    "S","BLE","B","A","C4","PT","PL","PERF","RUF"
]
ignore = [
    "PLR2004",
    "W291",
    "W292",
    "W293",
    "E501",
]

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "ANN", "PLR2004", "INP001", "BLE001"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80
